modified:   budget_ci_wini/Makefile modified:   lnbp21_wini/Makefile modified:   stb0899_test/Makefile modified:   stb6100_wini/Makefile modified:   stb6100_wini/stb6100.c

--- a/budget_ci_wini/Makefile
+++ b/budget_ci_wini/Makefile
@@ -1,9 +1,9 @@
 obj-m += budget-ci.o
-KERNSRC="/usr/src/linux-5.10/include/media"
+KERNSRC="/usr/src/linux/include/media"
 EXTRA_CFLAGS += -I${KERNSRC}
-KERNSRC1="/usr/src/linux-5.10/drivers/media/pci/ttpci"
+KERNSRC1="/usr/src/linux/drivers/media/pci/ttpci"
 EXTRA_CFLAGS += -I${KERNSRC1}
-KERNELSOURCE="/usr/src/linux-5.10/drivers/media"
+KERNELSOURCE="/usr/src/linux/drivers/media"
 EXTRA_CFLAGS += -I${KERNELSOURCE}/usb/dvb-usb
 EXTRA_CFLAGS += -I${KERNELSOURCE}/dvb-frontends
 EXTRA_CFLAGS += -I${KERNELSOURCE}/tuners
