--- a/stb0899_test/Makefile
+++ b/stb0899_test/Makefile
@@ -2,9 +2,9 @@ stb0899-objs := stb0899_drv.o stb0899_algo.o
 # obj-m += stb0899_drv.o
 # obj-m += stb0899_algo.o
 obj-m += stb0899.o
-KERNSRC="/usr/src/linux-5.10/include/media"
+KERNSRC="/usr/src/linux/include/media"
 EXTRA_CFLAGS += -I${KERNSRC}
-KERNELSOURCE="/usr/src/linux-5.10/drivers/media"
+KERNELSOURCE="/usr/src/linux/drivers/media"
 EXTRA_CFLAGS += -I${KERNELSOURCE}/usb/dvb-usb
 EXTRA_CFLAGS += -I${KERNELSOURCE}/dvb-frontends
 EXTRA_CFLAGS += -I${KERNELSOURCE}/tuners
