--- a/stb6100_wini/Makefile
+++ b/stb6100_wini/Makefile
@@ -1,7 +1,7 @@
 obj-m += stb6100.o
-KERNSRC="/usr/src/linux-5.10/include/media"
+KERNSRC="/usr/src/linux/include/media"
 EXTRA_CFLAGS += -I${KERNSRC}
-KERNELSOURCE="/usr/src/linux-5.10/drivers/media"
+KERNELSOURCE="/usr/src/linux/drivers/media"
 EXTRA_CFLAGS += -I${KERNELSOURCE}/usb/dvb-usb
 EXTRA_CFLAGS += -I${KERNELSOURCE}/dvb-frontends
 EXTRA_CFLAGS += -I${KERNELSOURCE}/tuners
